Used namespace in routes & fixed the bug in admins_controller

--- a/app/views/admins/user_info.html.erb
+++ b/app/views/admins/user_info.html.erb
@@ -2,7 +2,7 @@
 
   <div class="header">
     <span class="title">User Information</span>
-    <%= link_to "back", admin_users_path, :class=>"back"%>
+    <%= link_to "back", admins_users_path, :class=>"back"%>
     <%= link_to posts_path, :class=>"back_to_posts" do %>
       <i class="fas fa-home"></i> <span class="home_button">Home</span>
     <% end %>
