--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
           <i class="fas fa-home"></i> <span class="home_button">Home</span>
         <% end %>
       <% else %>
-        <%= link_to "admin", admin_users_path, :class=> "link_to_admin" %>
+        <%= link_to "admin", admins_users_path, :class=> "link_to_admin" %>
         <%= link_to posts_path, :class=>"back_to_posts_admin" do %>
           <i class="fas fa-home"></i> <span class="home_button">Home</span>
         <% end %>
